--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,24 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+  <% if user_signed_in? %>
+  <%= button_to "ログアウト",
+        destroy_user_session_path,
+        method: :delete,
+        data: { turbo: false },
+        class: "btn btn-danger" %>
+<% else %>
+  <%= link_to "ログイン", new_user_session_path, class: "btn btn-outline-primary me-2" %>
+  <%= link_to "新規登録", new_user_registration_path, class: "btn btn-success" %>
+<% end %>
+
     <%= yield %>
+    <%= javascript_importmap_tags %>
   </body>
 </html>
