--- a/app/views/shelves/_form.html.erb
+++ b/app/views/shelves/_form.html.erb
@@ -1,27 +1,17 @@
-<%= form_with(model: shelf) do |form| %>
-  <% if shelf.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(shelf.errors.count, "error") %> prohibited this shelf from being saved:</h2>
+<turbo-frame id="shelf_details">
+  <h5 class="fw-semibold mb-3">棚の編集</h5>
 
-      <ul>
-        <% shelf.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+  <%= form_with(model: shelf, local: false) do |f| %>
+    <div class="mb-3">
+      <%= f.label :title, "Title", class: "form-label" %>
+      <%= f.text_field :title, class: "form-control" %>
     </div>
+
+    <div class="mb-3">
+      <%= f.label :description, "Description", class: "form-label" %>
+      <%= f.text_area :description, rows: 3, class: "form-control" %>
+    </div>
+
+    <%= f.submit "更新", class: "btn btn-primary w-100" %>
   <% end %>
-
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</turbo-frame>
