--- a/app/views/shelves/edit.html.erb
+++ b/app/views/shelves/edit.html.erb
@@ -1,10 +1,13 @@
-<h1>Editing shelf</h1>
+<h2 class="mb-4">棚の編集</h2>
 
 <%= render "form", shelf: @shelf %>
 
-<br>
+<div class="mt-3">
+  <%= link_to "Show this shelf", @shelf, class: "btn btn-outline-secondary me-2" %>
+  <%= link_to "Back to shelves", shelves_path, class: "btn btn-outline-secondary me-2" %>
 
-<div>
-  <%= link_to "Show this shelf", @shelf %> |
-  <%= link_to "Back to shelves", shelves_path %>
+  <%= link_to "Delete this shelf",
+              shelf_path(@shelf),
+              data: { turbo_method: :delete, confirm: "本当に削除しますか？" },
+              class: "btn btn-outline-danger" %>
 </div>
