--- a/app/views/shelves/_form.html.erb
+++ b/app/views/shelves/_form.html.erb
@@ -1,17 +1,25 @@
 <turbo-frame id="shelf_details">
-  <h5 class="fw-semibold mb-3">棚の編集</h5>
+  <h5 class="fw-semibold mb-3"><%= shelf.persisted? ? "棚の編集" : "新しい棚" %></h5>
 
   <%= form_with(model: shelf, local: false) do |f| %>
     <div class="mb-3">
-      <%= f.label :title, "Title", class: "form-label" %>
+      <%= f.label :title, "タイトル", class: "form-label" %>
       <%= f.text_field :title, class: "form-control" %>
     </div>
 
     <div class="mb-3">
-      <%= f.label :description, "Description", class: "form-label" %>
+      <%= f.label :description, "説明", class: "form-label" %>
       <%= f.text_area :description, rows: 3, class: "form-control" %>
     </div>
 
-    <%= f.submit "更新", class: "btn btn-primary w-100" %>
-  <% end %>
+    <%= f.submit (shelf.persisted? ? "更新" : "作成"), class: "btn btn-primary w-100" %>
+    <% if shelf.persisted? %>
+      <hr class="my-3">
+      <%= button_to "削除する",
+          shelf_path(shelf),
+          method: :delete,
+          data: { turbo: false, confirm: "本当に削除しますか？" },
+          class: "btn btn-outline-danger w-100" %>
+    <% end %>
+    <% end %>
 </turbo-frame>
