--- a/app/views/shelves/index.html.erb
+++ b/app/views/shelves/index.html.erb
@@ -3,11 +3,11 @@
     <!-- 左カラム -->
     <aside class="col-md-3 bg-white border-end p-4">
       <h5 class="fw-semibold mb-3">棚一覧</h5>
-      <% @shelves.each do |shelf| %>
-        <%= link_to shelf.title,
-          shelf_path(shelf),
-          data: { turbo_stream: true },
-          class: "list-group-item list-group-item-action d-block mb-2" %>
+      <%= link_to "＋ 棚追加", new_shelf_path,
+      class: "btn btn-outline-primary w-100 mb-3",
+      data: { turbo_frame: "shelf_details" } %>
+      <%= turbo_frame_tag "shelf_list" do %>
+        <%= render "shelves/list", shelves: @shelves %>
       <% end %>
     </aside>
 
