ストレージ追加

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -23,7 +23,7 @@
 
     <div class="mb-3">
       <%= f.label :image, "画像アップロード", class: "form-label" %>
-      <%= f.file_field :image, class: "form-control", required: true %>
+      <%= f.file_field :image, class: "form-control" %>
     </div>
 
     <div class="d-grid">
