--- a/app/views/shelves/_content.html.erb
+++ b/app/views/shelves/_content.html.erb
@@ -7,13 +7,12 @@
     <div
       class="shelf border rounded p-4 bg-white text-center position-relative"
       style="
-        width: 100%;
-        max-width: 400px;
+        width: 400px;
         min-height: 400px;
         background-image: url('<%= asset_path("empty_shelf.png") %>');
         background-size: contain;
         background-repeat: no-repeat;
-        background-position: center bottom;
+        background-position: center;
         overflow-y: auto;
       "
     >
